# yamiconfig

./: .editorconfig  .envrc  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
tasks/: __init__.py
tests/: __init__.py  test_has_path.py  test_main.py  test_override.py  test_set.py  test_strict.py  test_yamiconfig.py
yamiconfig/: __init__.py  schema.py
